src/components/Home/Home.css
.home {
    background-color: #5ab9ea;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='100%25' gradientTransform='rotate(167,806,422)'%3E%3Cstop offset='0' stop-color='%235ab9ea'/%3E%3Cstop offset='1' stop-color='%235680e9'/%3E%3C/linearGradient%3E%3Cpattern patternUnits='userSpaceOnUse' id='b' width='300' height='250' x='0' y='0' viewBox='0 0 1080 900'%3E%3Cg fill-opacity='0.05'%3E%3Cpolygon fill='%23444' points='90 150 0 300 180 300'/%3E%3Cpolygon points='90 150 180 0 0 0'/%3E%3Cpolygon fill='%23AAA' points='270 150 360 0 180 0'/%3E%3Cpolygon fill='%23DDD' points='450 150 360 300 540 300'/%3E%3Cpolygon fill='%23999' points='450 150 540 0 360 0'/%3E%3Cpolygon points='630 150 540 300 720 300'/%3E%3Cpolygon fill='%23DDD' points='630 150 720 0 540 0'/%3E%3Cpolygon fill='%23444' points='810 150 720 300 900 300'/%3E%3Cpolygon fill='%23FFF' points='810 150 900 0 720 0'/%3E%3Cpolygon fill='%23DDD' points='990 150 900 300 1080 300'/%3E%3Cpolygon fill='%23444' points='990 150 1080 0 900 0'/%3E%3Cpolygon fill='%23DDD' points='90 450 0 600 180 600'/%3E%3Cpolygon points='90 450 180 300 0 300'/%3E%3Cpolygon fill='%23666' points='270 450 180 600 360 600'/%3E%3Cpolygon fill='%23AAA' points='270 450 360 300 180 300'/%3E%3Cpolygon fill='%23DDD' points='450 450 360 600 540 600'/%3E%3Cpolygon fill='%23999' points='450 450 540 300 360 300'/%3E%3Cpolygon fill='%23999' points='630 450 540 600 720 600'/%3E%3Cpolygon fill='%23FFF' points='630 450 720 300 540 300'/%3E%3Cpolygon points='810 450 720 600 900 600'/%3E%3Cpolygon fill='%23DDD' points='810 450 900 300 720 300'/%3E%3Cpolygon fill='%23AAA' points='990 450 900 600 1080 600'/%3E%3Cpolygon fill='%23444' points='990 450 1080 300 900 300'/%3E%3Cpolygon fill='%23222' points='90 750 0 900 180 900'/%3E%3Cpolygon points='270 750 180 900 360 900'/%3E%3Cpolygon fill='%23DDD' points='270 750 360 600 180 600'/%3E%3Cpolygon points='450 750 540 600 360 600'/%3E%3Cpolygon points='630 750 540 900 720 900'/%3E%3Cpolygon fill='%23444' points='630 750 720 600 540 600'/%3E%3Cpolygon fill='%23AAA' points='810 750 720 900 900 900'/%3E%3Cpolygon fill='%23666' points='810 750 900 600 720 600'/%3E%3Cpolygon fill='%23999' points='990 750 900 900 1080 900'/%3E%3Cpolygon fill='%23999' points='180 0 90 150 270 150'/%3E%3Cpolygon fill='%23444' points='360 0 270 150 450 150'/%3E%3Cpolygon fill='%23FFF' points='540 0 450 150 630 150'/%3E%3Cpolygon points='900 0 810 150 990 150'/%3E%3Cpolygon fill='%23222' points='0 300 -90 450 90 450'/%3E%3Cpolygon fill='%23FFF' points='0 300 90 150 -90 150'/%3E%3Cpolygon fill='%23FFF' points='180 300 90 450 270 450'/%3E%3Cpolygon fill='%23666' points='180 300 270 150 90 150'/%3E%3Cpolygon fill='%23222' points='360 300 270 450 450 450'/%3E%3Cpolygon fill='%23FFF' points='360 300 450 150 270 150'/%3E%3Cpolygon fill='%23444' points='540 300 450 450 630 450'/%3E%3Cpolygon fill='%23222' points='540 300 630 150 450 150'/%3E%3Cpolygon fill='%23AAA' points='720 300 630 450 810 450'/%3E%3Cpolygon fill='%23666' points='720 300 810 150 630 150'/%3E%3Cpolygon fill='%23FFF' points='900 300 810 450 990 450'/%3E%3Cpolygon fill='%23999' points='900 300 990 150 810 150'/%3E%3Cpolygon points='0 600 -90 750 90 750'/%3E%3Cpolygon fill='%23666' points='0 600 90 450 -90 450'/%3E%3Cpolygon fill='%23AAA' points='180 600 90 750 270 750'/%3E%3Cpolygon fill='%23444' points='180 600 270 450 90 450'/%3E%3Cpolygon fill='%23444' points='360 600 270 750 450 750'/%3E%3Cpolygon fill='%23999' points='360 600 450 450 270 450'/%3E%3Cpolygon fill='%23666' points='540 600 630 450 450 450'/%3E%3Cpolygon fill='%23222' points='720 600 630 750 810 750'/%3E%3Cpolygon fill='%23FFF' points='900 600 810 750 990 750'/%3E%3Cpolygon fill='%23222' points='900 600 990 450 810 450'/%3E%3Cpolygon fill='%23DDD' points='0 900 90 750 -90 750'/%3E%3Cpolygon fill='%23444' points='180 900 270 750 90 750'/%3E%3Cpolygon fill='%23FFF' points='360 900 450 750 270 750'/%3E%3Cpolygon fill='%23AAA' points='540 900 630 750 450 750'/%3E%3Cpolygon fill='%23FFF' points='720 900 810 750 630 750'/%3E%3Cpolygon fill='%23222' points='900 900 990 750 810 750'/%3E%3Cpolygon fill='%23222' points='1080 300 990 450 1170 450'/%3E%3Cpolygon fill='%23FFF' points='1080 300 1170 150 990 150'/%3E%3Cpolygon points='1080 600 990 750 1170 750'/%3E%3Cpolygon fill='%23666' points='1080 600 1170 450 990 450'/%3E%3Cpolygon fill='%23DDD' points='1080 900 1170 750 990 750'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect x='0' y='0' fill='url(%23b)' width='100%25' height='100%25'/%3E%3C/svg%3E");
    background-attachment: fixed;
    background-size: cover;
    /* background-image: linear-gradient(#5680E9, #5AB9EA); */
    height: 100vh;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    /* font-family: 'Permanent Marker', cursive; */
    cursor: default;
}

.welcome-title {
    font-size: 35px;
    font-family: 'Pacifico', cursive;
    font-weight: 100;
    margin-bottom: 10px;
}

.home-container {
    background-color: #18274294;
    font-family: 'Roboto';
    justify-content: center;
    width: 65%;
    height: fit-content;
    color: white;
    border-radius: 5px;
    cursor: default;
    padding-bottom: 60px;
}

.welcome {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    font-size: 25px;
    margin-top: 50px;
    margin-bottom: 0px;
        font-weight: bolder;

}

.intro-description {
    white-space: pre-wrap;
    text-align: -webkit-center;
    font-size: 20px;
}

.quiz-list {
    display: flex;
    flex-wrap: wrap;
    text-align: center;
    justify-content: center;
    cursor: pointer;
    margin-top: 20px;
}

.quiz-item {
    background-color: #131f2f;
    margin: 10px;
    width: 82%;
    height: 4rem;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 20px;
    border-radius: 5px;
    white-space: pre-wrap;
    padding: 35px;
    transition: all 0.3s ease-out;
    box-shadow: 4px 4px 7px black;
}

.quiz-item:hover {
    background-color: #2b3c4c;
    margin: 10px;
    width: 82%;
    height: 4rem;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 20px;
    border-radius: 5px;
    white-space: pre-wrap;
    padding: 35px;
}

.quiz-item:active {
    background-color: #5f8cb9;
    margin: 10px;
    width: 82%;
    height: 4rem;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 20px;
    border-radius: 5px;
    white-space: pre-wrap;
    padding: 35px
}

@media screen and (max-width: 960px) {
    .quiz-container {
        width: 90%;
    }

    .button-link {
        display: none;
    }

    .navbar-logo {
        font-size: 20px;
    }

    i.fas.fa-check {
        font-weight: 600;
        font-size: 18px;
        margin-left: -6px;
    }

    .question-prompt {
        font-size: 20px
    }

    .answer, .answer:hover, .answer-correct, .answer-incorrect {
        font-size: 15px;
        width: 100%;
    }

    .answer, .answer-correct, .answer-incorrect {
        transition: ease-in .2;
    }


    .score {
    background-color:  #131f2f;
    font-family: 'Roboto';
    font-size: 25px;
    padding: 30px;
    height: 4rem;
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    color: white;
    margin-top: 100px;
    top: 0;
    border-radius: 5px;
    cursor: default;
    width: 200px;
}

    .score-final {
        font-size: 20px;
        width: 200px;
        height: 4rem;
    }

    .score-result {
        font-size: 30px;
        margin: 0px
    }

    .end-buttons {
        display: flex;
        flex-direction: column;
        margin-top: 20px;
        box-shadow: 4px 4px 7px black;
    }

    .end-button {
        font-size: 20px;
    }

    .intro-description {
    white-space: pre-wrap;
    text-align: -webkit-center;
    font-size: 15px;
    }

    .quiz-item {
        background-color: #131f2f;
        margin: 10px;
        width: 82%;
        height: 4rem;
        display: flex;
        align-items: center;
        justify-content: center;
        font-size: 15px;
        border-radius: 5px;
        white-space: pre-wrap;
        padding: 15px;
        box-shadow: 4px 4px 7px black;
    }

    .quiz-item:hover {
        background-color: #2b3c4c;
        margin: 10px;
        width: 82%;
        height: 4rem;
        display: flex;
        align-items: center;
        justify-content: center;
        font-size: 15px;
        border-radius: 5px;
        white-space: pre-wrap;
        padding: 15px;
    }

    .quiz-item:active{
        background-color: #5f8cb9;
        margin: 10px;
        width: 82%;
        height: 4rem;
        display: flex;
        align-items: center;
        justify-content: center;
        font-size: 15px;
        border-radius: 5px;
        white-space: pre-wrap;
        padding: 15px;
    }
    .welcome-title {
        font-size: 25px;
        font-family: 'Pacifico', cursive;
        font-weight: bolder;
    }
}

